@@ -22,6 +22,9 @@ IN DEVELOPMENT
 
    * ``reconfigure`` can now convert from repositories.  (Aaron Bentley)
 
+   * ``merge`` now warns when merge directives cause cherrypicks.
+     (Aaron Bentley)
+
   BUGFIXES:
 
    * Fix Makefile rules for doc generation. (Ian Clatworthy, #175207)
